--- a/production/tables.html
+++ b/production/tables.html
@@ -418,7 +418,7 @@
             }
             var data = `
             <tr data-value="${key}">
-              <td>${key}</td>
+              <td>${group[0].gname}</td>
               <td>${member}</td>
               <td><button type="button" class="btn btn-tool" onclick="delGroup('${key}')"><i class="fa fa-times"></i></button></td>
             </tr>
