--- a/production/form.html
+++ b/production/form.html
@@ -194,8 +194,8 @@
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                           <button type="reset" class="btn btn-default">다시 작성</button>
-                          <input type="button" class="btn btn-success" onclick="bookMeet(); return false;">회의 예약</button>
-                          <input type="button" class="btn btn-primary" onclick="startMeet(); return false;">회의 시작</button>
+                          <button class="btn btn-success" onclick="bookMeet(); return false;">회의 예약</button>
+                          <button class="btn btn-primary" onclick="startMeet(); return false;">회의 시작</button>
                         </div>
                       </div>
 
