--- a/production/login.html
+++ b/production/login.html
@@ -279,7 +279,7 @@
 
           $.ajax(settings)
             .done(function (response) {
-              alert('success');
+              // alert('success');
               // 회원 가입 후 위치
               location.href = "#signin"
 
