--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -276,7 +276,7 @@
       }
 
       function startMeeting(mid, isMade){
-        alert(mid);
+        // alert(mid);
         if(!isMade) {
           window.location.replace("project_detail.html?mid="+mid);
         } else {
