--- a/production/form.html
+++ b/production/form.html
@@ -356,7 +356,7 @@
         }`
       }
 
-      alert(settings.data);
+      // alert(settings.data);
 
       $.ajax(settings)
         .done(function (response) {
@@ -400,7 +400,7 @@
         }`
       }
 
-      alert(settings.data);
+      // alert(settings.data);
 
       $.ajax(settings)
         .done(function (response) {
