--- a/production/projects.html
+++ b/production/projects.html
@@ -263,7 +263,7 @@
       }
 
       function startMeeting(mid, isMade){
-        alert(mid);
+        // alert(mid);
         if(!isMade) {
           window.location.replace("project_detail.html?mid="+mid);
         } else {
