--- a/production/echarts.html
+++ b/production/echarts.html
@@ -366,8 +366,8 @@
                     <div class="row">
                       <div class="col-md-9 col-sm-9 col-xs-12">
                         <!-- tensor -->
-                        <p>tensor board</p>
-                        <iframe id="tensor" src="" width="900" height="650"></iframe>
+                        <!-- <p>tensor board</p> -->
+                        <iframe id="tensor" src="localhost:6006" width="900" height="650"></iframe>
                       </div>
                       <div class="col-md-3 col-sm-3 col-xs-12">
                         <table class="table">
