--- a/production/echarts.html
+++ b/production/echarts.html
@@ -367,7 +367,7 @@
                       <div class="col-md-9 col-sm-9 col-xs-12">
                         <!-- tensor -->
                         <!-- <p>tensor board</p> -->
-                        <iframe id="tensor" src="localhost:6006" width="900" height="650"></iframe>
+                        <iframe id="tensor" src="http://localhost:6006/#projector&run=." width="900" height="650"></iframe>
                       </div>
                       <div class="col-md-3 col-sm-3 col-xs-12">
                         <table class="table">
